--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,29 @@
     <string name="app_author">Created By : Andryan</string>
     <string name="news_content">Content</string>
     <string name="text_no_result">No News Result, Try Again Later !!!</string>
+
+    <string-array name="newsCategoryList">
+        <item>Choose Category</item>
+        <item>Business</item>
+        <item>Entertainment</item>
+        <item>General</item>
+        <item>Health</item>
+        <item>Science</item>
+        <item>Sports</item>
+        <item>Technology</item>
+    </string-array>
+
+    <string-array name="newsCountryList">
+        <item>Choose Country</item>
+        <item>Australia</item>
+        <item>Chinese</item>
+        <item>France</item>
+        <item>Indonesia</item>
+        <item>Japan</item>
+        <item>Russia</item>
+        <item>South Korea</item>
+        <item>Thailand</item>
+        <item>United Kingdom</item>
+        <item>United States</item>
+    </string-array>
 </resources>
